Added lions logistics

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -357,6 +357,26 @@
             </div>
         </div>
     </div>
+    <div class="row">
+        <div class="col s12 m2">
+            <img src="img/Lions.jpg"
+                 alt="logo" class="vtc-logo">
+        </div>
+        <div class="col s12 m10 ">
+            <div class="card grey darken-4">
+                <div class="card-content white-text">
+                    <span class="card-title">Lions Logistics UK</span>
+                    <p>Lions Logistics UK is a UK based fast growing VTC. We value our Drivers time and hard work which
+                        will always lead to praise not just by the management team but the whole VTC. We are a community
+                        who respect others opinions, wishes, ideas ect. LLUK strive to be the best in all aspects of a
+                        typical VTC but also we love to display our drivers skill sets! </p>
+                </div>
+                <div class="card-action">
+                    <a href="https://discord.gg/Cgz9Fcc">Discord</a>
+                </div>
+            </div>
+        </div>
+    </div>
 </section>
 <script
         src="https://code.jquery.com/jquery-3.5.1.min.js"
