Fixed image type for lions

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -359,7 +359,7 @@
     </div>
     <div class="row">
         <div class="col s12 m2">
-            <img src="img/Lions.jpg"
+            <img src="img/Lions.png"
                  alt="logo" class="vtc-logo">
         </div>
         <div class="col s12 m10 ">
