--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+﻿<!doctype html>
 <html class="no-js" lang="en">
 
 <head>
@@ -330,7 +330,7 @@
                 </div>
                 <div class="card-action">
                     <a href="https://discord.gg/KCwWAm8">Discord</a>
-                    <a href="https://www.tangotransport.co.uk">Website</a>
+                    <a href="https://www.tangotransportvtc.com/">Website</a>
                 </div>
             </div>
         </div>
