--- a/public_html/index.html
+++ b/public_html/index.html
@@ -159,7 +159,7 @@
                 </div>
                 <div class="card-action">
                     <a href="https://discord.gg/4HDtTxp">Discord</a>
-                    <a href="https://lakeside-transport.wixsite.com/welcome">Website</a>
+                    <a href="https://lstvtc.co.uk">Website</a>
                 </div>
             </div>
         </div>
