Update link to TruckinCrazy
Their site does not support https

--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
                 </div>
                 <div class="card-action">
                     <a href="https://www.truckincrazyvtc.co.uk/">Discord</a>
-                    <a href="https://truckincrazyvtc.co.uk">Website</a>
+                    <a href="http://truckincrazyvtc.co.uk/">Website</a>
                 </div>
             </div>
         </div>
