Add link to Lion Logistics website

--- a/index.html
+++ b/index.html
@@ -373,6 +373,7 @@
                 </div>
                 <div class="card-action">
                     <a href="https://discord.gg/Cgz9Fcc">Discord</a>
+                    <a href="https://trucksbook.eu/company/83002">Website</a>
                 </div>
             </div>
         </div>
